GNOME Bugzilla – Bug 617702
gjs_js_set_current_message fails when re-entered
Last modified: 2010-05-04 22:17:41 UTC
we have a crash where: . we receive a dbus signal . gjs_js_set_current_message is called with that message . the JS callback runs a recursive GMainLoop . in that loop, the next dbus message is processed . gjs_js_set_current_message is called with the new message and aborts.
I hadn't considered the recursive mainloop case. It makes sense to have it be a stack, then.
Created attachment 160301 [details] [review] dbus: Replace the set_current_message with push/pop to avoid re-entrency issues.
Review of attachment 160301 [details] [review]: Looks fine to me.