dbus: Replace the set_current_message with push/pop

to avoid re-entrency issues.

https://bugzilla.gnome.org/show_bug.cgi?id=617702